generated-tests/tests/snapshots/ts/typescript__test_generated_subscript_expression.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
arr3[i2]

AST:
(program
  (expression_statement
    (subscript_expression
      (identifier arr3)
      (identifier i2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "arr3",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 1,
            end_line: 1,
            end_column: 5,
        },
        SerializableUsage {
            name: "i2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 6,
            end_line: 1,
            end_column: 8,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
