generated-tests/tests/snapshots/ts/typescript__test_generated_template_type.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
const value28: `hello ${string}` = 'hello world';

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value28)
      (type_annotation
        (template_literal_type
          (string_fragment)
          (template_type
            (predefined_type)
          )
        )
      )
      (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value28",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
