generated-tests/tests/snapshots/ts/typescript__test_generated_try_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
try { const result1 = riskyOperation(); } catch (error1) { console.log(error1); }

AST:
(program
  (try_statement
    (statement_block
      (lexical_declaration
        (variable_declarator
          (identifier result1)
          (call_expression
            (identifier riskyOperation)
            (arguments)
          )
        )
      )
    )
    (catch_clause
      (identifier error1)
      (statement_block
        (expression_statement
          (call_expression
            (member_expression
              (identifier console)
              (property_identifier)
            )
            (arguments
              (identifier error1)
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "result1",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
