generated-tests/tests/snapshots/ts/typescript__test_generated_type_alias_declaration.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
type TestType = string;

AST:
(program
  (type_alias_declaration
    (type_identifier)
    (predefined_type)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestType",
            line_number: 1,
            definition_type: TypeDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
